Add alacritty config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,7 +20,7 @@ bind c new-window -c "#{pane_current_path}"
 
 # Set color
 set -g default-terminal "screen-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -sa terminal-overrides ',alacritty:RGB'
 
 # Status line
 bind t set-option status
