Add wezterm config and tokyonight colorscheme

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,11 +19,11 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Set color
-set -g default-terminal "screen-256color"
-set -sa terminal-overrides ',alacritty:RGB'
+# set -g default-terminal "screen-256color"
+# set -sa terminal-overrides ',wezterm:RGB'
 
 # Status line
 bind t set-option status
-set -g status-style "bg=#30363f fg=#a0a8b7"
+set -g status-style "bg=#16161e fg=#c0caf5"
 
 run '~/.tmux/plugins/tpm/tpm'
